--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: #1A202C;
+}
+
+.dash{
+  margin-left: 0px;
+  margin-top: 10px;
+  color: #EFE0C5 ;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: Arial, sans-serif;
+}
+
+.Label{
+  margin-top: 100px;
+  color: #EFE0C5;
+}
+.home-container {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.home-title {
+  font-size: 2.5rem;
+  color: #EFE0C5;
+  margin-bottom: 20px;
+}
+
+.home-description {
+  font-size: 1.2rem;
+  color: #EFE0C5;
+}
+.filter-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #204263;
+  padding: 15px;
+  border-radius: 18px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-left: 200px;
+}
+
+.filter-container label {
+  margin: 10px;
+  font-size: 16px;
+  color: #EFE0C5; /* Cor do texto */
+}
+
+.filter-container input {
+  padding: 10px;
+  margin: 5px;
+  font-size: 16px;
+  border: 1px solid #ccc; /* Cor da borda */
+  border-radius: 5px;
+}
+
+.filter-container button {
+  margin-top: 20px;
+  padding: 12px 24px;
+  font-size: 16px;
+  background-color: #007bff;
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filter-container button:hover {
+  background-color: #0056b3;
 }
