--- a/src/App.css
+++ b/src/App.css
@@ -41,29 +41,40 @@ body {
   font-size: 1.2rem;
   color: #EFE0C5;
 }
+
+.no-results{
+display: flex;
+flex-direction: column;
+align-items: center;
+color: #EFE0C5;
+font-size: 30px;
+}
+
 .filter-container {
-  margin-top: 20px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #204263;
-  padding: 15px;
+  padding: 10px;
   border-radius: 18px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-left: 200px;
+  margin-bottom: 30px;
+  
 }
 
 .filter-container label {
   margin: 10px;
-  font-size: 16px;
-  color: #EFE0C5; /* Cor do texto */
+  font-size: 18px;
+  color: #EFE0C5; 
+
 }
 
 .filter-container input {
   padding: 10px;
   margin: 5px;
   font-size: 16px;
-  border: 1px solid #ccc; /* Cor da borda */
+  border: 1px solid #ccc; 
   border-radius: 5px;
 }
 
@@ -81,4 +92,10 @@ body {
 
 .filter-container button:hover {
   background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .App {
+    margin-left: 0;
+  }
 }
